--- a/estilo/style.css
+++ b/estilo/style.css
@@ -119,8 +119,9 @@ max-width:  600px;
 margin: auto;
 padding-left: 10px;
 padding-right: 10px;
-margin-bottom: 30px;
+padding-bottom: 50px;
 }
+
 
 nav{
     background-color: #1a5c37;
